--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -453,6 +453,8 @@
     <string name="security_settings_face_settings_remove_dialog_details_convenience" msgid="475568135197468990">"‏آپ کے چہرے کے ماڈل کو مستقل اور محفوظ طریقے سے حذف کر دیا جائے گا۔\n\nحذف کرنے کے بعد، آپ کو اپنے فون کو غیر مقفل کرنے کے لیے آپ کو اپنا PIN، پیٹرن یا پاس ورڈ درکار ہوگا۔"</string>
     <string name="security_settings_face_settings_context_subtitle" msgid="8284262560781442403">"اپنے فون کو غیر مقفل کرنے کے لیے فیس اَنلاک کا استعمال کریں"</string>
     <string name="security_settings_fingerprint_preference_title" msgid="2484965173528415458">"فنگر پرنٹ"</string>
+    <!-- no translation found for security_settings_fingerprint_settings_preferences_category (8975029409126780752) -->
+    <skip />
     <string name="security_settings_work_fingerprint_preference_title" msgid="2076006873519745979">"کام کیلئے فنگر پرنٹ"</string>
     <string name="fingerprint_manage_category_title" msgid="1249349505688268850">"فنگر پرنٹس کا نظم کریں"</string>
     <string name="fingerprint_usage_category_title" msgid="8757959085075024856">"فنگر پرنٹ استعمال کریں برائے"</string>
@@ -591,6 +593,12 @@
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="tablet" msgid="4372740782513990687">"اب آپ اپنا ٹیبلیٹ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="device" msgid="6208711210125838327">"اب آپ اپنا آلہ غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
     <string name="security_settings_fingerprint_enroll_finish_v2_message" product="default" msgid="4755651286485895622">"اب آپ اپنا فون غیر مقفل کرنے یا یہ توثیق کرنے کیلئے کہ یہ آپ ہی ہیں، اپنا فنگر پرنٹ استعمال کر سکتے ہیں، جیسے ایپس میں سائن ان کرتے وقت"</string>
+    <!-- no translation found for security_settings_require_screen_on_to_auth_title (6393244827110756927) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_description (8555651197315796037) -->
+    <skip />
+    <!-- no translation found for security_settings_require_screen_on_to_auth_keywords (5557869560397089603) -->
+    <skip />
     <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"اسے بعد میں کریں"</string>
     <string name="security_settings_udfps_tip_fingerprint_help" msgid="7580784640741217494">"اٹھائیں، پھر دوبارہ ٹچ کریں"</string>
     <string name="security_settings_udfps_side_fingerprint_help" msgid="2567232481013195191">"اپنے فنگر پرنٹ کے حصے کو سینسر پر رکھیں اور دبائے رکھیں پھر، دوسرے حصے پر سوئچ کریں"</string>
@@ -1515,6 +1523,8 @@
     <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"دستیاب نہیں ہے کیونکہ بیڈ ٹائم موڈ آن ہے"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"اسکرین سیور کا استعمال کریں"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ڈاک سے منسلک یا چارج ہونے کے دوران"</string>
+    <!-- no translation found for screensaver_settings_summary_dock_and_charging (8485905100159376156) -->
+    <skip />
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"چارج ہوتے وقت"</string>
     <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"ڈاک کیے ہونے پر"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"کبھی نہیں"</string>
@@ -1914,8 +1924,7 @@
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> کا ربط ختم کر دیا جائے گا۔"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ایتھرنیٹ ٹیدرنگ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"‏Ethernet ایتھرنیٹ کے ذریعے فون کے انٹرنیٹ کنیکشن کا اشتراک کریں"</string>
-    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
-    <skip />
+    <string name="ethernet_tethering_subtext" product="tablet" msgid="8796744370636115313">"ایتھرنیٹ کے ذریعے ٹیبلیٹ کے انٹرنیٹ کنکشن کا اشتراک کریں"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"اپنے موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کیلئے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کیلئے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏اپنے Wi‑Fi یا موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کے لیے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کے لیے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"مدد"</string>
